--- a/xmlrpc_proxy_server.ipynb
+++ b/xmlrpc_proxy_server.ipynb
@@ -9,20 +9,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Listening on port 7070...\n"
+      "Listening on port 7070...\n",
+      "Сервер недоступен\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [04/Dec/2023 21:17:17] \"POST /RPC2 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Dec/2023 21:17:24] \"POST /RPC2 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Dec/2023 21:17:31] \"POST /RPC2 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Dec/2023 21:17:43] \"POST /RPC2 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Dec/2023 21:17:49] \"POST /RPC2 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Dec/2023 21:17:57] \"POST /RPC2 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Dec/2023 21:18:06] \"POST /RPC2 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [04/Dec/2023 21:37:13] \"POST /RPC2 HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сервер недоступен\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [04/Dec/2023 21:37:24] \"POST /RPC2 HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -42,8 +51,10 @@
     "server = SimpleXMLRPCServer((\"localhost\", 7070), \n",
     "                            requestHandler=RequestHandler, allow_none=True)\n",
     "\n",
+    "\n",
+    "\n",
     "real_server = xmlrpc.client.ServerProxy(\"http://localhost:8089\")\n",
-    "db_server = xmlrpc.client.ServerProxy(\"http://localhost:6060\")\n",
+    "new_stat_server = xmlrpc.client.ServerProxy(\"http://localhost:6060\")\n",
     "\n",
     "def ping():\n",
     "    now = datetime.datetime.now()\n",
@@ -51,7 +62,10 @@
     "    result = real_server.ping()\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('ping', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('ping', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(ping, 'ping')\n",
@@ -63,7 +77,10 @@
     "    result = real_server.now()\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('now', when, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('now', when, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(now, 'now')\n",
@@ -75,7 +92,10 @@
     "    result = real_server.type(arg)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('show_type', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('show_type', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(show_type, 'type')\n",
@@ -87,7 +107,10 @@
     "    result = real_server.sum(a, b)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('test_sum', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('test_sum', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(test_sum, 'sum')\n",
@@ -99,7 +122,10 @@
     "    result = real_server.pow(a, b)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('test_pow', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('test_pow', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(test_pow, 'pow')\n",
@@ -110,7 +136,10 @@
     "    result = real_server.in_black_list(candidate)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('in_black_list', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('in_black_list', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(in_black_list, 'in_black_list')\n",
@@ -122,7 +151,11 @@
     "    result = real_server.to_binary(data_arg)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('to_binary', now, exec_time)\n",
+    "    try:\n",
+    "    \n",
+    "        new_stat_server.store('to_binary', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(to_binary, 'to_binary')\n",
@@ -134,7 +167,10 @@
     "    result = real_server.inversion(data_arg)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('inversion', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('inversion', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(inversion, 'inversion')\n",
@@ -146,7 +182,10 @@
     "    result = real_server.mirror(data_arg)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('mirror', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('mirror', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(mirror, 'mirror')\n",
@@ -158,7 +197,10 @@
     "    result = real_server.picture_binarisation(data_arg, threshold)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('picture_binarisation', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('picture_binarisation', now, exec_time)    \n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(picture_binarisation, 'picture_binarisation')\n",
@@ -170,7 +212,10 @@
     "    result = real_server.in_black_list_by(surname, name, patronym, birth)\n",
     "    end = time.time()\n",
     "    exec_time = end - start\n",
-    "    db_server.store('in_black_list_by', now, exec_time)\n",
+    "    try:\n",
+    "        new_stat_server.store('in_black_list_by', now, exec_time)\n",
+    "    except ConnectionRefusedError:\n",
+    "        print('Сервер недоступен')\n",
     "    return result\n",
     "\n",
     "server.register_function(in_black_list_by, 'in_black_list_by')  \n",
